// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Row Polymorphism > open records 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_19;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_20(env0, record1) {
  const v0 = record1.x;
  return v0;
}

function closure_19(env0, r1) {
  const env_cls2 = {};
  const fnref_cls2 = closure_20;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(r: Row) =>
  λ(record: Σ($sig: [ x: Num | r ]) . Schema [ x: Num | r ]) -> (record).x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"getX"}
[3] lambda {"variable":"r","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [17]
[4] lit {"value":{"type":"Atom","value":"Row"}}
[5] lambda {"variable":"record","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [15]
  :env -> [18]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [10]
[7] row:ext {"label":"x"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Schema"}}
[12] row:ext {"label":"x"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"Atom","value":"Num"}}
[14] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[15] proj {"label":"x"}
  :target -> [16]
[16] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[17] env
[18] env
[19] closure
  :body -> [3]
  :env -> [17]
[20] closure
  :body -> [5]
  :env -> [18]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_19
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_20(env0, record1) entry=entry
    entry:
      let v0 = read record1.x
      return v0
  fn closure_19(env0, r1) entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_20
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "getX",
    "normalized": "λ(r: Row) =>
  (closure: λ(record: Σ($sig: [ x: Num | r ]) . Schema [ x: Num | r ]) ->
    (record).x -| Γ: r)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(r: Row) => Π(t1: Σ($sig: [ x: Num | r ]) . Schema [ x: Num | r ]) -> Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = getX;
  const v1 = "Num";
  const v2 = {
    y: v1
  };
  const fnref3 = v0.__fn;
  const env4 = v0.__env;
  const v5 = fnref3(env4, v2);
  const v6 = 10;
  const v7 = 20;
  const v8 = {
    x: v6,
    y: v7
  };
  const fnref9 = v5.__fn;
  const env10 = v5.__env;
  const v11 = fnref9(env10, v8);
  return v11;
}
return main();
",
    "elaborated": "getX @[ y: Num ] (Struct [ x: 10, y: 20 ])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p1"}
[3] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"getX"}
[6] var:ref {"name":"getX"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"y"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] row:empty
[10] struct
  :field -> [11] {"label":"x"}
  :field -> [12] {"label":"y"}
[11] lit {"value":{"type":"Num","value":10}}
[12] lit {"value":{"type":"Num","value":20}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = getX
      let v1 = Num
      let v2 = alloc { y: v1 }
      let fnref3 = read v0.__fn
      let env4 = read v0.__env
      let v5 = call *fnref3(env4, v2)
      let v6 = 10
      let v7 = 20
      let v8 = alloc { x: v6, y: v7 }
      let fnref9 = read v5.__fn
      let env10 = read v5.__env
      let v11 = call *fnref9(env10, v8)
      return v11",
    "name": "p1",
    "normalized": "10",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = getX;
  const v1 = "Num";
  const v2 = "Num";
  const v3 = {
    z: v1,
    y: v2
  };
  const fnref4 = v0.__fn;
  const env5 = v0.__env;
  const v6 = fnref4(env5, v3);
  const v7 = 5;
  const v8 = 7;
  const v9 = 3;
  const v10 = {
    x: v7,
    z: v8,
    y: v9
  };
  const fnref11 = v6.__fn;
  const env12 = v6.__env;
  const v13 = fnref11(env12, v10);
  return v13;
}
return main();
",
    "elaborated": "getX @[ z: Num, y: Num ] (Struct [ x: 5, z: 7, y: 3 ])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p2"}
[3] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"getX"}
[6] var:ref {"name":"getX"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"z"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] row:ext {"label":"y"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Num"}}
[11] row:empty
[12] struct
  :field -> [13] {"label":"x"}
  :field -> [14] {"label":"z"}
  :field -> [15] {"label":"y"}
[13] lit {"value":{"type":"Num","value":5}}
[14] lit {"value":{"type":"Num","value":7}}
[15] lit {"value":{"type":"Num","value":3}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = getX
      let v1 = Num
      let v2 = Num
      let v3 = alloc { z: v1, y: v2 }
      let fnref4 = read v0.__fn
      let env5 = read v0.__env
      let v6 = call *fnref4(env5, v3)
      let v7 = 5
      let v8 = 7
      let v9 = 3
      let v10 = alloc { x: v7, z: v8, y: v9 }
      let fnref11 = read v6.__fn
      let env12 = read v6.__env
      let v13 = call *fnref11(env12, v10)
      return v13",
    "name": "p2",
    "normalized": "5",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = getX;
  const v1 = "String";
  const v2 = {
    name: v1
  };
  const fnref3 = v0.__fn;
  const env4 = v0.__env;
  const v5 = fnref3(env4, v2);
  const v6 = 100;
  const v7 = "point";
  const v8 = {
    x: v6,
    name: v7
  };
  const fnref9 = v5.__fn;
  const env10 = v5.__env;
  const v11 = fnref9(env10, v8);
  return v11;
}
return main();
",
    "elaborated": "getX @[ name: String ] (Struct [ x: 100, name: "point" ])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p3"}
[3] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"getX"}
[6] var:ref {"name":"getX"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"name"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"String"}}
[9] row:empty
[10] struct
  :field -> [11] {"label":"x"}
  :field -> [12] {"label":"name"}
[11] lit {"value":{"type":"Num","value":100}}
[12] lit {"value":{"type":"String","value":"point"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = getX
      let v1 = String
      let v2 = alloc { name: v1 }
      let fnref3 = read v0.__fn
      let env4 = read v0.__env
      let v5 = call *fnref3(env4, v2)
      let v6 = 100
      let v7 = "point"
      let v8 = alloc { x: v6, name: v7 }
      let fnref9 = read v5.__fn
      let env10 = read v5.__env
      let v11 = call *fnref9(env10, v8)
      return v11",
    "name": "p3",
    "normalized": "100",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Row Polymorphism > polymorphic extension 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_24;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_25(env0, rec1) {
  const v0 = 0;
  const v1 = {
    ...rec1,
    z: v0
  };
  return v1;
}

function closure_24(env0, r1) {
  const env_cls2 = {};
  const fnref_cls2 = closure_25;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(r: Row) =>
  λ(rec: Σ($sig: [ y: Num, x: Num | r ]) . Schema [ y: Num, x: Num | r ]) ->
    { rec | z = 0 }",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"addZ"}
[3] lambda {"variable":"r","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [22]
[4] lit {"value":{"type":"Atom","value":"Row"}}
[5] lambda {"variable":"rec","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [19]
  :env -> [23]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [12]
[7] row:ext {"label":"y"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] row:ext {"label":"x"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Num"}}
[11] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"y"}
  :rest -> [16]
  :value -> [15]
[15] lit {"value":{"type":"Atom","value":"Num"}}
[16] row:ext {"label":"x"}
  :rest -> [18]
  :value -> [17]
[17] lit {"value":{"type":"Atom","value":"Num"}}
[18] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[19] inj {"label":"z"}
  :target -> [21]
  :value -> [20]
[20] lit {"value":{"type":"Num","value":0}}
[21] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[22] env
[23] env
[24] closure
  :body -> [3]
  :env -> [22]
[25] closure
  :body -> [5]
  :env -> [23]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_24
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_25(env0, rec1) entry=entry
    entry:
      let v0 = 0
      let v1 = update-immutable rec1 { z: v0 }
      return v1
  fn closure_24(env0, r1) entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_25
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "addZ",
    "normalized": "λ(r: Row) =>
  (closure: λ(rec: Σ($sig: [ y: Num, x: Num | r ]) .
    Schema [ y: Num, x: Num | r ]) ->
    { rec | z = 0 } -| Γ: r)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(r: Row) =>
  Π(t1: Σ($sig: [ y: Num, x: Num | r ]) . Schema [ y: Num, x: Num | r ]) ->
    Σ($sig: [ z: Num, y: Num, x: Num | r ]) .
      Schema [ z: Num, y: Num, x: Num | r ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = addZ;
  const v1 = {};
  const fnref2 = v0.__fn;
  const env3 = v0.__env;
  const v4 = fnref2(env3, v1);
  const v5 = 2;
  const v6 = 1;
  const v7 = {
    y: v5,
    x: v6
  };
  const fnref8 = v4.__fn;
  const env9 = v4.__env;
  const v10 = fnref8(env9, v7);
  return v10;
}
return main();
",
    "elaborated": "addZ @[] (Struct [ y: 2, x: 1 ])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p1"}
[3] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"addZ"}
[6] var:ref {"name":"addZ"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:empty
[8] struct
  :field -> [9] {"label":"y"}
  :field -> [10] {"label":"x"}
[9] lit {"value":{"type":"Num","value":2}}
[10] lit {"value":{"type":"Num","value":1}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = addZ
      let v1 = alloc {  }
      let fnref2 = read v0.__fn
      let env3 = read v0.__env
      let v4 = call *fnref2(env3, v1)
      let v5 = 2
      let v6 = 1
      let v7 = alloc { y: v5, x: v6 }
      let fnref8 = read v4.__fn
      let env9 = read v4.__env
      let v10 = call *fnref8(env9, v7)
      return v10",
    "name": "p1",
    "normalized": "Struct [ y: 2, x: 1, z: 0 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Σ($sig: [ z: Num, y: Num, x: Num | [] ]) .
  Schema [ z: Num, y: Num, x: Num | [] ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = addZ;
  const v1 = "String";
  const v2 = {
    color: v1
  };
  const fnref3 = v0.__fn;
  const env4 = v0.__env;
  const v5 = fnref3(env4, v2);
  const v6 = 10;
  const v7 = 5;
  const v8 = "red";
  const v9 = {
    y: v6,
    x: v7,
    color: v8
  };
  const fnref10 = v5.__fn;
  const env11 = v5.__env;
  const v12 = fnref10(env11, v9);
  return v12;
}
return main();
",
    "elaborated": "addZ @[ color: String ] (Struct [ y: 10, x: 5, color: "red" ])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"p2"}
[3] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"addZ"}
[6] var:ref {"name":"addZ"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"color"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"String"}}
[9] row:empty
[10] struct
  :field -> [11] {"label":"y"}
  :field -> [12] {"label":"x"}
  :field -> [13] {"label":"color"}
[11] lit {"value":{"type":"Num","value":10}}
[12] lit {"value":{"type":"Num","value":5}}
[13] lit {"value":{"type":"String","value":"red"}}",
    "ivl": "",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = addZ
      let v1 = String
      let v2 = alloc { color: v1 }
      let fnref3 = read v0.__fn
      let env4 = read v0.__env
      let v5 = call *fnref3(env4, v2)
      let v6 = 10
      let v7 = 5
      let v8 = "red"
      let v9 = alloc { y: v6, x: v7, color: v8 }
      let fnref10 = read v5.__fn
      let env11 = read v5.__env
      let v12 = call *fnref10(env11, v9)
      return v12",
    "name": "p2",
    "normalized": "Struct [ y: 10, x: 5, color: "red", z: 0 ]",
    "solverTrace": "",
    "type": "Σ($sig: [ z: Num, y: Num, x: Num | [ color: String ] ]) .
  Schema [ z: Num, y: Num, x: Num | [ color: String ] ]",
    "validity": "",
  },
]
`;

exports[`Language Tour — Row Polymorphism > polymorphic projection 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_19;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_20(env0, obj1) {
  const v0 = obj1.name;
  return v0;
}

function closure_19(env0, r1) {
  const env_cls2 = {};
  const fnref_cls2 = closure_20;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}
return main();
",
    "elaborated": "λ(r: Row) =>
  λ(obj: Σ($sig: [ name: String | r ]) . Schema [ name: String | r ]) ->
    (obj).name",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"getName"}
[3] lambda {"variable":"r","icit":"Implicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [17]
[4] lit {"value":{"type":"Atom","value":"Row"}}
[5] lambda {"variable":"obj","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [15]
  :env -> [18]
[6] sigma {"variable":"$sig","level":2}
  :annotation -> [7]
  :body -> [10]
[7] row:ext {"label":"name"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"String"}}
[9] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] app {"icit":"Explicit"}
  :arg -> [12]
  :func -> [11]
[11] lit {"value":{"type":"Atom","value":"Schema"}}
[12] row:ext {"label":"name"}
  :rest -> [14]
  :value -> [13]
[13] lit {"value":{"type":"Atom","value":"String"}}
[14] var:bound {"index":0}
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[15] proj {"label":"name"}
  :target -> [16]
[16] var:bound {"index":0}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[17] env
[18] env
[19] closure
  :body -> [3]
  :env -> [17]
[20] closure
  :body -> [5]
  :env -> [18]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_19
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_20(env0, obj1) entry=entry
    entry:
      let v0 = read obj1.name
      return v0
  fn closure_19(env0, r1) entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_20
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2",
    "name": "getName",
    "normalized": "λ(r: Row) =>
  (closure: λ(obj: Σ($sig: [ name: String | r ]) .
    Schema [ name: String | r ]) ->
    (obj).name -| Γ: r)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(r: Row) =>
  Π(t1: Σ($sig: [ name: String | r ]) . Schema [ name: String | r ]) -> String",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "Alice";
  const v1 = 30;
  const v2 = {
    name: v0,
    age: v1
  };
  return v2;
}
return main();
",
    "elaborated": "Struct [ name: "Alice", age: 30 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"person"}
[3] struct
  :field -> [4] {"label":"name"}
  :field -> [5] {"label":"age"}
[4] lit {"value":{"type":"String","value":"Alice"}}
[5] lit {"value":{"type":"Num","value":30}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = "Alice"
      let v1 = 30
      let v2 = alloc { name: v0, age: v1 }
      return v2",
    "name": "person",
    "normalized": "Struct [ name: "Alice", age: 30 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Schema [ name: String, age: Num ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = "1984";
  const v1 = "Orwell";
  const v2 = 328;
  const v3 = {
    name: v0,
    author: v1,
    pages: v2
  };
  return v3;
}
return main();
",
    "elaborated": "Struct [ name: "1984", author: "Orwell", pages: 328 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"book"}
[3] struct
  :field -> [4] {"label":"name"}
  :field -> [5] {"label":"author"}
  :field -> [6] {"label":"pages"}
[4] lit {"value":{"type":"String","value":"1984"}}
[5] lit {"value":{"type":"String","value":"Orwell"}}
[6] lit {"value":{"type":"Num","value":328}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = "1984"
      let v1 = "Orwell"
      let v2 = 328
      let v3 = alloc { name: v0, author: v1, pages: v2 }
      return v3",
    "name": "book",
    "normalized": "Struct [ name: "1984", author: "Orwell", pages: 328 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Schema [ name: String, author: String, pages: Num ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = getName;
  const v1 = "Num";
  const v2 = {
    age: v1
  };
  const fnref3 = v0.__fn;
  const env4 = v0.__env;
  const v5 = fnref3(env4, v2);
  const v6 = person;
  const fnref7 = v5.__fn;
  const env8 = v5.__env;
  const v9 = fnref7(env8, v6);
  return v9;
}
return main();
",
    "elaborated": "getName @[ age: Num ] person",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"n1"}
[3] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"getName"}
[6] var:ref {"name":"getName"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"age"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"Num"}}
[9] row:empty
[10] var:free {"name":"person"}
[11] var:ref {"name":"person"}
  :refers_to -> [10]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = getName
      let v1 = Num
      let v2 = alloc { age: v1 }
      let fnref3 = read v0.__fn
      let env4 = read v0.__env
      let v5 = call *fnref3(env4, v2)
      let v6 = person
      let fnref7 = read v5.__fn
      let env8 = read v5.__env
      let v9 = call *fnref7(env8, v6)
      return v9",
    "name": "n1",
    "normalized": ""Alice"",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "String",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = getName;
  const v1 = "String";
  const v2 = "Num";
  const v3 = {
    author: v1,
    pages: v2
  };
  const fnref4 = v0.__fn;
  const env5 = v0.__env;
  const v6 = fnref4(env5, v3);
  const v7 = book;
  const fnref8 = v6.__fn;
  const env9 = v6.__env;
  const v10 = fnref8(env9, v7);
  return v10;
}
return main();
",
    "elaborated": "getName @[ author: String, pages: Num ] book",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"n2"}
[3] app {"icit":"Explicit"}
  :arg -> [13]
  :func -> [4]
[4] app {"icit":"Implicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"getName"}
[6] var:ref {"name":"getName"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] row:ext {"label":"author"}
  :rest -> [9]
  :value -> [8]
[8] lit {"value":{"type":"Atom","value":"String"}}
[9] row:ext {"label":"pages"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Num"}}
[11] row:empty
[12] var:free {"name":"book"}
[13] var:ref {"name":"book"}
  :refers_to -> [12]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = getName
      let v1 = String
      let v2 = Num
      let v3 = alloc { author: v1, pages: v2 }
      let fnref4 = read v0.__fn
      let env5 = read v0.__env
      let v6 = call *fnref4(env5, v3)
      let v7 = book
      let fnref8 = read v6.__fn
      let env9 = read v6.__env
      let v10 = call *fnref8(env9, v7)
      return v10",
    "name": "n2",
    "normalized": ""1984"",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "String",
    "validity": "valid",
  },
]
`;
